Fixed overflow nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,6 @@ body {
   border: 2px solid black;
   background-color: #354052;
   color: #ebf0f6;
-  height: 100%;
 }
 
 .image-and-name {
